Made correction to non-latin clock position to align it with the standard header. Enyo-DCO-1.1-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/css/moonstone-light.css
+++ b/css/moonstone-light.css
@@ -4438,6 +4438,8 @@
   white-space: nowrap;
   font-size: 61px;
   line-height: 62px;
+  line-height: 96px;
+  height: 72px;
 }
 .moon-clock-meridiem {
   font-family: "MuseoSans 900";
